<!--
  ~ Giua App
  ~ Android app to view data from the giua@school workbook
  ~ Copyright (C) 2021 - 2022 Hiem, Franck1421 and contributors
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see https://www.gnu.org/licenses/.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Giua App</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Utente</string>
    <string name="nav_header_subtitle">Tipo utente</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_voti">Voti</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_lezioni">Lezioni</string>
    <string name="detail_vote_date">Data:</string>
    <string name="detail_vote_type">Tipo:</string>
    <string name="detail_vote_arguments">Argomenti:</string>
    <string name="detail_vote_judge">Giudizio:</string>
    <string name="menu_bacheca">Bacheca</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="site_url_text_view">Imposta l\'url del sito:</string>
    <string name="no_elements">Non ci sono elementi da visualizzare</string>
    <string name="your_connection_error">Sono stati riscontrati problemi con la tua connessione</string>
    <string name="site_connection_error">Il sito non sta funzionando, riprova tra poco!"</string>
    <string name="maintenance_is_active_error">Il sito è in manutenzione, riprova tra poco!</string>

    <!-- Error activity strings -->
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">C\'è stato un errore inaspettato.\nCi scusiamo per il disagio.</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Impossibile determinare errore!</string>
    <string name="customactivityoncrash_error_activity_restart_app">Riavvia app</string>
    <string name="customactivityoncrash_error_activity_close_app">Chiudi l\'app</string>
    <string name="customactivityoncrash_error_activity_error_details">Dettagli</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Informazioni Errore</string>
    <string name="customactivityoncrash_error_activity_error_details_close">OK</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copia</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copiato negli appunti</string>

    <!-- Activity Main (login screen) -->
    <string name="activitymain_button_login">ACCEDI</string>
    <string name="activitymain_checkbox_remember_credentials">Ricorda credenziali</string>
    <string name="activitymain_pwdtextbox_hint">password</string>
    <string name="activitymain_btn_showpassword">Mostra password</string>
    <string name="activitymain_usertextbox_hint">nome.cognome.f1</string>
    <string name="activitymain_textbox_screentitle">Accedi al Registro Elettronico</string>

    <!-- Activity Settings (settings screen) -->
    <string name="activitysettings_textbox_siteurl_hint">URL</string>
    <string name="activitysettings_btn_crash">destroy the world</string>
    <string name="activitysettings_btn_savesettings">Salva</string>
    <string name="activitysettings_text_crash">Clicca per far crashare l\'app</string>

    <!-- Fragment lezioni -->
    <string name="fragmentlezioni_textview_currentdate">Data attuale</string>
    <string name="fragmentlezioni_btn_confirmdate">Conferma data</string>
    <string name="fragmentlezioni_textview_visualizer_arguments">Argomenti</string>
    <string name="fragmentlezioni_textview_visualizer_activities">Attivita</string>
    <string name="fragmentlezioni_textview_visualizer_support">Sostegno</string>

    <!-- Loading Screen -->
    <string name="loadingscreen_textview_automaticlogin" tools:ignore="TypographyEllipsis">Accesso automatico\n Attendere prego...</string>

    <!-- Newsletter view -->
    <string name="newsletterview_imagebutton_viewdocument_contentdescription">Visualizza documento circolare</string>
    <string name="newsletterview_imagebutton_viewattachment_contentdescription">Visualizza allegati della circolare</string>

    <!-- Vote component -->
    <string name="votecomponent_textview_firstperiod">1° Quadrimestre</string>
    <string name="votecomponent_textview_secondperiod">2° Quadrimestre</string>
    <string name="votecomponent_textview_mean">Medie:</string>

    <!-- Activity main drawer -->
    <string name="activitymaindrawer_nav_voti">Voti</string>
    <string name="activitymaindrawer_nav_agenda">Agenda</string>
    <string name="activitymaindrawer_nav_lezioni">Lezioni</string>
    <string name="activitymaindrawer_nav_bacheca">Bacheca</string>
    <string name="activitymaindrawer_nav_pagella">Pagella</string>
    <string name="logout_text">Esci</string>
    <string name="settings_text">Impostazioni</string>
    <string name="obscure_layout_text">Annulla</string>
    <string name="homeworks">Compiti</string>
    <string name="tests">Verifiche</string>

    <!-- Agenda fragment -->
    <string name="agenda_view_type_homeworks">Compiti</string>
    <string name="agenda_view_type_homework_and_tests">Compiti e Verifiche</string>
    <string name="agenda_view_type_tests">Verifiche</string>
    <string name="agenda_view_type_interviews">Colloqui</string>

    <!-- Pagella fragment -->
    <string name="fragment_pagella">Pagella</string>
    <string name="report_card_btn_first_quarter">1° Quadrimestre</string>
    <string name="report_card_btn_second_quarter">2° Quadrimestre</string>
    <string name="site_in_maintenace_error">Il sito è in manutenzione, riprova più tardi</string>
    <string name="activitymaindrawer_nav_home">Home</string>
    <string name="authorizations_exit">Autorizzazione in deroga all\'orario di uscita:</string>
    <string name="authorizations_entry">Autorizzazione in deroga all\'orario di entrata:</string>
    <string name="agenda_view_type_activities">Attività</string>
    <string name="home_chart_title">Andamento generale</string>

</resources>