<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Giua App
  ~ Android app to view data from the giua@school workbook
  ~ Copyright (C) 2021 - 2021 Hiem, Franck1421 and contributors
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see https://www.gnu.org/licenses/.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_voti"
            android:title="@string/activitymaindrawer_nav_voti" />
        <item
            android:id="@+id/nav_agenda"
            android:title="@string/activitymaindrawer_nav_agenda" />
        <item
            android:id="@+id/nav_lezioni"
            android:title="@string/activitymaindrawer_nav_lezioni" />
        <item
            android:id="@+id/nav_circolari"
            android:title="@string/activitymaindrawer_nav_circolari" />
        <item
            android:id="@+id/nav_pagella"
            android:title="@string/activitymaindrawer_nav_pagella" />
    </group>

</menu>