<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_voti">

    <fragment
        android:id="@+id/nav_voti"
        android:name="com.giua.app.ui.voti.VotiFragment"
        android:label="@string/menu_voti"
        tools:layout="@layout/fragment_voti" />

    <fragment
        android:id="@+id/nav_agenda"
        android:name="com.giua.app.ui.agenda.AgendaFragment"
        android:label="@string/menu_agenda"
        tools:layout="@layout/fragment_agenda" />

    <fragment
        android:id="@+id/nav_lezioni"
        android:name="com.giua.app.ui.lezioni.LezioniFragment"
        android:label="@string/menu_lezioni"
        tools:layout="@layout/fragment_lezioni" />

    <fragment
        android:id="@+id/nav_circolari"
        android:name="com.giua.app.ui.circolari.CircolariFragment"
        android:label="@string/menu_circolari"
        tools:layout="@layout/fragment_circolari" />
</navigation>