<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Giua App
  ~ Android app to view data from the giua@school workbook
  ~ Copyright (C) 2021 - 2021 Hiem, Franck1421 and contributors
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see https://www.gnu.org/licenses/.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_appbarlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GiuaApp.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/relative_main_color"
            app:popupTheme="@style/Theme.GiuaApp.PopupOverlay"
            app:title="Impostazioni"
            app:titleTextAppearance="@style/ToolbarTextStyle"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/settings_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbarlayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/settings_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_appbarlayout">

            <TextView
                android:id="@+id/settings_url_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/varelaroundregular"
                android:text="@string/site_url_text_view"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/settings_site_url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/varelaroundregular"
                android:hint="@string/activitysettings_textbox_siteurl_hint"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:labelFor="@id/settings_url_text_view"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/settings_crash_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/varelaroundregular"
                android:text="@string/activitysettings_text_crash"
                android:textSize="15sp" />

            <!--DEBUG DELETEME-->
            <Button
                android:id="@+id/settings_crash_button"
                android:layout_width="157dp"
                android:textColor="@color/adaptive_color_text"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/activitysettings_btn_crash" />

            <Button
                android:id="@+id/settings_about_button"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="About"
                android:textColor="@color/adaptive_color_text" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/settings_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="4dp"
        android:text="@string/activitysettings_btn_savesettings"
        android:textColor="@color/adaptive_color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>