<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Giua App
  ~ Android app to view data from the giua@school workbook
  ~ Copyright (C) 2021 - 2021 Hiem, Franck1421 and contributors
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see https://www.gnu.org/licenses/.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cool_blue"
    android:backgroundTint="#5EFFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".ActivityManager">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card_view"
        android:layout_width="0dp"
        android:layout_height="637dp"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accesso al Registro"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textUser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="209dp"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:fontFamily="sans-serif"
                android:hint="@string/activitymain_pwdtextbox_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textUser"
                app:layout_constraintVertical_bias="0.189" />

            <TextView
                android:id="@+id/btn_student_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="20dp"
                android:text="Sei uno studente?"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/checkbox_remember_credentials"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <ImageView
                android:id="@+id/login_pwd_icon"
                android:layout_width="38dp"
                android:layout_height="49dp"
                app:layout_constraintBottom_toBottomOf="@+id/textPassword"
                app:layout_constraintEnd_toStartOf="@+id/textPassword"
                app:layout_constraintHorizontal_bias="0.765"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textPassword"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_passwordlock" />

            <ImageView
                android:id="@+id/login_user_icon"
                android:layout_width="38dp"
                android:layout_height="49dp"
                app:layout_constraintBottom_toBottomOf="@+id/textUser"
                app:layout_constraintEnd_toStartOf="@+id/textUser"
                app:layout_constraintHorizontal_bias="0.796"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textUser"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_account_circle" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="105dp"
                android:layout_height="59dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/login_button"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/show_password_button"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:backgroundTint="#00000000"
                android:contentDescription="@string/activitymain_btn_showpassword"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textPassword"
                app:layout_constraintTop_toTopOf="@+id/textPassword"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_visibility_off_24" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_color"
                android:paddingStart="25dp"
                android:paddingTop="15dp"
                android:paddingEnd="25dp"
                android:paddingBottom="15dp"
                android:text="@string/activitymain_button_login"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.362" />

            <EditText
                android:id="@+id/textUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/activitymain_usertextbox_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.127" />

            <CheckBox
                android:id="@+id/checkbox_remember_credentials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="116dp"
                android:checked="true"
                android:text="@string/activitymain_checkbox_remember_credentials"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintVertical_bias="0.512" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="135dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/ic_giuaschool_logo1" />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:text="Giua App"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_logo"
        app:layout_constraintVertical_bias="0.034" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/impostazioni"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_card_view"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>