<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Giua App
  ~ Android app to view data from the giua@school workbook
  ~ Copyright (C) 2021 - 2021 Hiem, Franck1421 and contributors
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see https://www.gnu.org/licenses/.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vote_view_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_radius_10dp"
    android:padding="10dp">

    <!-- Questo è il componente utilizzato per aggiungere i voti -->

    <TextView
        android:id="@+id/text_view_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/varelaroundregular"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="Materia"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        tools:ignore="HardcodedText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/list_vote_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/list_vote"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mean_vote_layout"
        app:layout_constraintStart_toStartOf="@+id/text_view_subject"
        app:layout_constraintTop_toBottomOf="@+id/text_view_subject"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/list_votes_text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/varelaroundregular"
            android:text="@string/votecomponent_textview_firstperiod"
            android:textSize="15sp" />

        <HorizontalScrollView
            android:id="@+id/list_vote_scroll_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:overScrollMode="never"
            android:padding="5dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/list_vote_linear_layout_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/list_votes_text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:fontFamily="@font/varelaroundregular"
            android:text="@string/votecomponent_textview_secondperiod"
            android:textSize="15sp" />

        <HorizontalScrollView
            android:id="@+id/list_vote_scroll_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:overScrollMode="never"
            android:padding="5dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/list_vote_linear_layout_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </HorizontalScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mean_vote_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/mean_vote_layout"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/list_vote_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_vote_layout">

        <TextView
            android:id="@+id/mean_layout_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"
            android:fontFamily="@font/varelaroundregular"
            android:text="@string/votecomponent_textview_mean"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_view_vote_primo_quadrimestre"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_radius_10dp"
            android:fontFamily="@font/varelaroundregular"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="7.3"
            android:textAlignment="center"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/text_view_vote_secondo_quadrimestre"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/corner_radius_10dp"
            android:fontFamily="@font/varelaroundregular"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="7.3"
            android:textAlignment="center"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>